5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1613_1801.log
== TEST (2019-03-31 00:49:17) 
-- CODE:
o = input("Digite o objeto: ")
r = o*
print("Abra" + o)
print(o*n)
	
-- ERROR:
File "XXXX", line 2
    r = o*
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:49:41) 
-- CODE:
o = input("Digite o objeto: ")

print("Abra" + o)

	
-- OUTPUT:
Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:50:36) 
-- CODE:
o = input("Digite o objeto: ")

print("Abra " + o)

	
-- OUTPUT:
Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:51:43) 
-- CODE:
o = input("Digite o objeto: ")
f = o*5
print("Abra " + o)
print(f)

	
-- OUTPUT:
Abra livro
livrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:52:27) 
-- CODE:
o = input("Digite o objeto: ")
f = o*5
print("Abra " + o)
print("Abra " + o, f)

	
-- OUTPUT:
Abra livro
Abra livro livrolivrolivrolivrolivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:53:08) 
-- CODE:
o = input("Digite o objeto: ")
f = 5
print("Abra " + o)
print(("Abra " + o)*f)

	
-- OUTPUT:
Abra livro
Abra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:54:05) 
-- CODE:
o = input("Digite o objeto: ")
f = 5
print(o)
print(("Abra " + o)*f)

	
-- OUTPUT:
livro
Abra livroAbra livroAbra livroAbra livroAbra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:55:52) 
-- CODE:
o = input("Digite o objeto: ")
f = 5
print(o)
print(("Abra " + o + " ")*f)

	
-- OUTPUT:
livro
Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:56:02) 
-- CODE:
o = input("Digite o objeto: ")
f = 5
print(o)
print(("Abra " + o + " ")*f)

	
-- EXECUTION TIME:
0.184833
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
livro
Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
carro
Abra carro Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
caixa
Abra caixa Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:56:17) 
-- CODE:
o = input("Digite o objeto: ")
f = 4
print(o)
print(("Abra " + o + " ")*f)

	
-- EXECUTION TIME:
0.129473
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Digite o objeto: livro
Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Digite o objeto: carro
Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Digite o objeto: caixa
Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:56:36) 
-- CODE:
o = input("Digite o objeto: ")
f = 4
print(o)
print(("Abra " + o + " ")*f)

	
-- OUTPUT:
livro
Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:57:02) 
-- CODE:
o = input("Digite o objeto: ")
f = 4
print(("Abra " + o + " ")*f)

	
-- EXECUTION TIME:
0.141603
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa Abra caixa Abra caixa Abra caixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:57:38) 
-- CODE:
o = input("Digite o objeto: ")
f = input("Digite repeticoes: ")
print(("Abra " + o + " ")*f)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(("Abra " + o + " ")*f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:58:31) 
-- CODE:
o = input("Digite o objeto: ")
f = input("Digite repeticoes: ")
print(("Abra " + o + " ")*f)

	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(("Abra " + o + " ")*f)
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 00:58:54) 
-- CODE:
o = input("Digite o objeto: ")
f = int(input("Digite repeticoes: "))
print(("Abra " + o + " ")*f)

	
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 00:59:08) 
-- CODE:
o = input("Digite o objeto: ")
f = int(input("Digite repeticoes: "))
print(("Abra " + o + " ")*f)

	
-- EXECUTION TIME:
0.117749
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:09:18) 
-- CODE:
o = input("Digite o objeto: ")
f = int(input("Digite repeticoes: "))
print(("Abra " + o + " ")*f)

	
-- EXECUTION TIME:
0.219624
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:09:20) 
-- CODE:
o = input("Digite o objeto: ")
f = int(input("Digite repeticoes: "))
print(("Abra " + o + " ")*f)

	
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:14:33) 
-- CODE:
o = input("Digite o objeto: ")
f = int(input("Digite repeticoes: "))
print(("Abra " + o + " ")*f)

	
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:09) 
-- CODE:
o = input("Digite o objeto: ")
f = int(input("Digite repeticoes: "))
print(("Abra " + o + " ")*f)

	
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
